coinswap-swift/coinswapFFI.h

uint16_t uniffi_coinswap_ffi_checksum_method_taker_fetch_offers(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_get_balances(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_get_next_external_address(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_get_next_internal_addresses(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_get_transactions(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_get_wallet_name(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_is_offerbook_syncing(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_list_all_utxo_spend_info(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_lock_unspendable_utxos(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_recover_from_swap(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_run_offer_sync_now(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_send_to_address(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_setup_logging(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_sync_and_save(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_backup(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_display_offer(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_do_coinswap(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_fetch_all_makers(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_fetch_offers(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_get_balances(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_get_next_external_address(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_get_next_internal_addresses(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_get_transactions(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_get_wallet_name(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_is_offerbook_syncing(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_list_all_utxo_spend_info(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_lock_unspendable_utxos(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_recover_from_swap(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_run_offer_sync_now(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_send_to_address(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_setup_logging(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taproottaker_sync_and_save(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_constructor_taproottaker_init(void
    
);