coinswap-python/coinswap.py

_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_fetch_offers.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_get_balances.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_get_balances.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_get_next_external_address.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_get_next_external_address.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_get_next_internal_addresses.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_get_next_internal_addresses.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_get_transactions.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_get_transactions.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_get_wallet_name.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_get_wallet_name.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_is_offerbook_syncing.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_is_offerbook_syncing.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_list_all_utxo_spend_info.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_list_all_utxo_spend_info.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_lock_unspendable_utxos.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_lock_unspendable_utxos.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_recover_from_swap.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_recover_from_swap.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_run_offer_sync_now.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_run_offer_sync_now.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_send_to_address.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_send_to_address.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_setup_logging.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_setup_logging.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_sync_and_save.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_sync_and_save.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_constructor_taproottaker_init.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_constructor_taproottaker_init.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_backup.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_backup.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_display_offer.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_display_offer.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_do_coinswap.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_do_coinswap.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_fetch_all_makers.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_fetch_all_makers.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_fetch_offers.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_fetch_offers.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_get_balances.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_get_balances.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_get_next_external_address.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_get_next_external_address.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_get_next_internal_addresses.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_get_next_internal_addresses.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_get_transactions.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_get_transactions.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_get_wallet_name.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_get_wallet_name.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_is_offerbook_syncing.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_is_offerbook_syncing.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_list_all_utxo_spend_info.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_list_all_utxo_spend_info.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_lock_unspendable_utxos.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_lock_unspendable_utxos.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_recover_from_swap.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_recover_from_swap.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_run_offer_sync_now.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_run_offer_sync_now.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_send_to_address.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_send_to_address.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_setup_logging.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_setup_logging.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_sync_and_save.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taproottaker_sync_and_save.restype = ctypes.c_uint16

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)



# Public interface members begin here.


class _UniffiFfiConverterString:
    @staticmethod
    def check_lower(value):
        if not isinstance(value, str):
            raise TypeError("argument must be str, not {}".format(type(value).__name__))
        return value

    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative string length")
        utf8_bytes = buf.read(size)
        return utf8_bytes.decode("utf-8")

    @staticmethod
    def write(value, buf):
        utf8_bytes = value.encode("utf-8")
        buf.write_i32(len(utf8_bytes))
        buf.write(utf8_bytes)

    @staticmethod
    def lift(buf):
        with buf.consume_with_stream() as stream:
            return stream.read(stream.remaining()).decode("utf-8")

    @staticmethod
    def lower(value):
        with _UniffiRustBuffer.alloc_with_builder() as builder:
            builder.write(value.encode("utf-8"))
            return builder.finalize()

@dataclass
class Address:
    def __init__(self, *, address:str):
        self.address = address
        
        

    
    def __str__(self):
        return "Address(address={})".format(self.address)
    def __eq__(self, other):
        if self.address != other.address:
            return False
        return True

class _UniffiFfiConverterTypeAddress(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return Address(
            address=_UniffiFfiConverterString.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiFfiConverterString.check_lower(value.address)

    @staticmethod
    def write(value, buf):
        _UniffiFfiConverterString.write(value.address, buf)

@dataclass
class AddressType:
    def __init__(self, *, addr_type:str):
        self.addr_type = addr_type
        
        

    
    def __str__(self):
        return "AddressType(addr_type={})".format(self.addr_type)
    def __eq__(self, other):
        if self.addr_type != other.addr_type:
            return False
        return True

class _UniffiFfiConverterTypeAddressType(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return AddressType(
            addr_type=_UniffiFfiConverterString.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiFfiConverterString.check_lower(value.addr_type)

    @staticmethod
    def write(value, buf):
        _UniffiFfiConverterString.write(value.addr_type, buf)

class _UniffiFfiConverterInt64(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "i64"
    VALUE_MIN = -2**63
    VALUE_MAX = 2**63

    @staticmethod
    def read(buf):
        return buf.read_i64()

    @staticmethod
    def write(value, buf):
        buf.write_i64(value)

@dataclass
class Amount:
    def __init__(self, *, sats:int):
        self.sats = sats
        
        

    
    def __str__(self):
        return "Amount(sats={})".format(self.sats)
    def __eq__(self, other):
        if self.sats != other.sats:
            return False
        return True

class _UniffiFfiConverterTypeAmount(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return Amount(
            sats=_UniffiFfiConverterInt64.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiFfiConverterInt64.check_lower(value.sats)

    @staticmethod
    def write(value, buf):
        _UniffiFfiConverterInt64.write(value.sats, buf)

@dataclass
class Balances:
    def __init__(self, *, regular:int, swap:int, contract:int, fidelity:int, spendable:int):
        self.regular = regular
        self.swap = swap
        self.contract = contract
        self.fidelity = fidelity
        self.spendable = spendable
        
        

    
    def __str__(self):
        return "Balances(regular={}, swap={}, contract={}, fidelity={}, spendable={})".format(self.regular, self.swap, self.contract, self.fidelity, self.spendable)
    def __eq__(self, other):
        if self.regular != other.regular:
            return False
        if self.swap != other.swap:
            return False
        if self.contract != other.contract:
            return False
        if self.fidelity != other.fidelity:
            return False
        if self.spendable != other.spendable:
            return False
        return True

class _UniffiFfiConverterTypeBalances(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return Balances(
            regular=_UniffiFfiConverterInt64.read(buf),
            swap=_UniffiFfiConverterInt64.read(buf),
            contract=_UniffiFfiConverterInt64.read(buf),
            fidelity=_UniffiFfiConverterInt64.read(buf),
            spendable=_UniffiFfiConverterInt64.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiFfiConverterInt64.check_lower(value.regular)
        _UniffiFfiConverterInt64.check_lower(value.swap)
        _UniffiFfiConverterInt64.check_lower(value.contract)
        _UniffiFfiConverterInt64.check_lower(value.fidelity)
        _UniffiFfiConverterInt64.check_lower(value.spendable)

    @staticmethod
    def write(value, buf):
        _UniffiFfiConverterInt64.write(value.regular, buf)
        _UniffiFfiConverterInt64.write(value.swap, buf)
        _UniffiFfiConverterInt64.write(value.contract, buf)
        _UniffiFfiConverterInt64.write(value.fidelity, buf)
        _UniffiFfiConverterInt64.write(value.spendable, buf)

class _UniffiFfiConverterFloat64(_UniffiConverterPrimitiveFloat):
    @staticmethod
    def read(buf):
        return buf.read_double()

    @staticmethod
    def write(value, buf):
        buf.write_double(value)
